--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-flask==2.0.1
-flask-cors==3.0.10
-flask-sqlalchemy==2.5.1
-peewee==3.14.4
-requests==2.26.0
-pytest==6.2.5
+blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-SQLAlchemy==3.1.1
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+packaging==24.2
+peewee==3.17.8
+pluggy==1.5.0
+psutil==7.0.0
+pytest==8.3.4
+requests==2.32.3
+SQLAlchemy==2.0.37
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
